<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/footballMargin"
        android:alpha="0.4"
        android:src="@drawable/football"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/topMargin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/team_a"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/titletext"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logoheight"
                android:src="@drawable/norwich"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingRight="@dimen/scorePadding"
                android:text="0"
                android:textColor="@color/scoreTextColor"
                android:textSize="@dimen/scoreText"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="@string/foul"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="0"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="@string/penalty"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

                <TextView
                    android:id="@+id/team_a_penalty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="0"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addGoalForTeamA"
                android:text="@string/goal_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addFoulForTeamA"
                android:text="@string/foul_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addPenaltyForTeamA"
                android:text="@string/penalty_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/team_b"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/titletext"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logoheight"
                android:layout_gravity="right"
                android:src="@drawable/ipswich"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="@dimen/paddingBottom"
                android:paddingLeft="@dimen/scorePadding"
                android:text="0"
                android:textColor="@color/scoreTextColor"
                android:textSize="@dimen/scoreText"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="@string/foul"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="0"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="@string/penalty"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

                <TextView
                    android:id="@+id/team_b_penalty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/scoreBg"
                    android:fontFamily="sans-serif-medium"
                    android:padding="@dimen/secondaryTextPadding"
                    android:text="0"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/secondaryText"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addGoalForTeamB"
                android:text="@string/goal_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addFoulForTeamB"
                android:text="@string/foul_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:layout_marginLeft="@dimen/buttonMarginLeft"
                android:layout_marginRight="@dimen/buttonMarginRight"
                android:onClick="addPenaltyForTeamB"
                android:text="@string/penalty_button"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/buttonMarginBottom"
        android:layout_marginLeft="@dimen/buttonMarginLeft"
        android:layout_marginRight="@dimen/buttonMarginRight"
        android:onClick="resetScore"
        android:text="@string/reset_button"/>

</RelativeLayout>
